--- a/styles.css
+++ b/styles.css
@@ -266,7 +266,7 @@ font-style: bold;
 .separator {
     width: 100%;
     height: 1px;
-    background-color: #000; /* Czarna linia */
+    background-color: #ffffff; /* Czarna linia */
     margin: 20px 0; /* Margines góra-dół */
     color: rgb(56, 56, 56);
 }
@@ -620,7 +620,7 @@ audio {
 
 #blog h2 {
     font-size: 2em;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 #blog h3 {
@@ -630,12 +630,15 @@ audio {
 
 #blog p {
     font-size: 1.1em;
-    color: #555;
+    color: #c2c2c2;
 }
 
 #blog a {
     text-decoration: none;
-    color: #007BFF;
+    color: #ffffff;
+    background-color: #555555;
+    border-radius: 10px;
+    padding: 10px 20px; /* Dodaj odstępy wewnętrzne */
 }
 
 #blog a:hover {
@@ -671,6 +674,7 @@ audio {
     display: flex;
     justify-content: space-around; /* Równomierne rozmieszczenie */
     align-items: flex-start;
+    flex-wrap: wrap; /* Pozwala na zawijanie elementów */
     gap: 20px;
     padding: 20px;
     
@@ -729,5 +733,46 @@ audio {
   .offer-tile ul li {
     font-size: 16px;
     line-height: 1.5;
+  }
+  
+/* Media query dla ekranów o szerokości mniejszej niż 768px */
+@media (max-width: 768px) {
+    .offer-container {
+        flex-direction: column; /* Ustawia kafelki w kolumnie */
+        align-items: center; /* Wyśrodkowuje kafelki w kolumnie */
+    }
+
+    .offer-tile {
+        width: 90%; /* Dopasowanie szerokości kafelka do ekranu */
+    }
+}
+
+#o-mnie {
+    padding: 20px;
+    max-width: 800px;
+    margin: 50px auto;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+#o-mnie h1 {
+    text-align: center;
+    color: #444;
+}
+
+#o-mnie p {
+    line-height: 1.6;
+    font-size: 1rem;
+}
+
+@media (max-width: 600px) {
+    #o-mnie {
+        padding: 15px;
+    }
+}
+
+a {
+    color: white;
   }
   
