--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .banner {
-    background-image: url('lód.webp.webp'); /* nazwa pliku tła */
+    background-image: url('banner-bg-jesien.webp'); /* nazwa pliku tła */
     background-size: cover;
     background-position: center;
     color: white;
