--- a/BLOG/_layouts/default.html
+++ b/BLOG/_layouts/default.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }} | {{ site.title }}</title>
+    <link rel="icon" type="image/ico" href="logohexit.ico">
+    <meta name="description" content="Hexit Rely – Sound Designer and Music Producer specializing in immersive soundscapes, game audio, and electronic music.">
+
     <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
